--- a/Tabuada/css/styles.css
+++ b/Tabuada/css/styles.css
@@ -63,3 +63,32 @@ h2 {
     width: 100px;
     border-radius: 5px;
 }
+
+#multiplication-operations {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 300px;
+    margin: 1rem auto;
+    padding: 2rem 1rem;
+    background-color: #fff;
+    color: #333;
+    border-radius: 1rem;
+}
+
+#multiplication-operations .row {
+    display: flex;
+    justify-content: center;
+    border: 1px solid #ccc;
+    border-bottom: none;
+    padding: 0.5rem;
+    width: 150px;
+}
+
+#multiplication-operations .row:last-child {
+    border-bottom: 1px solid #ccc;
+}
+
+#multiplcation-operations .result {
+    margin-left: 1rem;
+}
